--- a/_sass/commons.scss
+++ b/_sass/commons.scss
@@ -170,3 +170,20 @@ iframe {
   width: 100%;
   aspect-ratio: 16 /9;
 }
+
+.post-tag {
+  border: 1px solid $grey-color-light;
+  border-radius: 24px;
+  padding: 2px 8px;
+  font-size: 11px;
+  margin-right: 1px;
+  margin-left: 1px;
+
+  @media screen and (max-width: $on-laptop) {
+    & {
+      display: inline-block !important;
+      margin-bottom: 4px;
+      margin-top: 0px;
+    }
+  }
+}
