--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -219,6 +219,16 @@
   }
 }
 
+.post-tags-wrapper {
+  margin-left: -2px;
+  margin-top: -4px;
+  display: block;
+  * {
+    list-style: none;
+    display: inline-block;
+  }
+}
+
 .post-content {
   margin-bottom: $spacing-unit;
 
