--- a/_sass/testimonial.scss
+++ b/_sass/testimonial.scss
@@ -47,6 +47,11 @@
           margin-top: 8px;
           display: block !important;
         }
+        .post-tag {
+          display: inline-block !important;
+          margin-bottom: 4px;
+          margin-top: 0px;
+        }
       }
     }
   }
