improve portfolio detail in markdown

--- a/_sass/commons.scss
+++ b/_sass/commons.scss
@@ -128,7 +128,7 @@ hr {
   aspect-ratio: 595 / 910;
 }
 
-.image-cover {
+.image-cover, video {
   margin-bottom: 16px;
   border-radius: $radius;
   width: 100%;
