--- a/_includes/blogs.html
+++ b/_includes/blogs.html
@@ -5,12 +5,43 @@
 <ul class="post-list">
   {%- for post in site.posts -%}
   <li>
-    <span class="post-meta">{{ post.date | date: date_format }} • {{ post.categories }}</span>
     <h3>
       <a class="post-link" href="{{ post.url | relative_url }}">
         {{ post.title | escape }}
       </a>
     </h3>
+
+    {%- if post.description -%}
+    <p class="post-meta">
+      {{ post.description }}
+    </p>
+    {%- endif -%}
+
+    <span class="post-meta">
+      <time class="dt-published" datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished">
+        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+        {%- if post.date -%}
+        {{ post.date| date: date_format }}
+        {% else %}
+        {{ post.start_date| date: date_format }}
+        {%- endif -%}
+      </time>
+      <span> </span>
+
+      <!-- minute read counter -->
+      {% capture words %}
+      {{ post.content | number_of_words | minus: 180 }}
+      {% endcapture %}
+      {% unless words contains "-" %}
+      {% assign minutes = words | plus: 180 | divided_by: 180 %}
+      • {{ minutes }}
+      {% if minutes == 1 %}
+      {{ " minute to read" }}
+      {% else %}
+      {{ " minutes to read" }}
+      {% endif %}
+      {% endunless %}
+    </span>
     {%- if site.show_excerpts -%}
     {{ post.excerpt }}
     {%- endif -%}
