--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,6 +7,7 @@ layout: default
 {%- assign testimonials = site.testimonials -%}
 {%- assign portfolios = site.portfolios -%}
 
+<div class="post-list-heading"></div>
 <div class="home">
   <div class="main-section">
     <div>
@@ -21,7 +22,7 @@ layout: default
   {{ content }}
 
   {% include dot.md %}
-  <h2 class="post-list-heading">Portfolios</h2>
+  <h2 id="portfolio-section" class="post-list-heading">Portfolios</h2>
   <div class="portfolios-wrapper">
     {% for portfolio in portfolios %}
     <div class="portfolio p{{ forloop.index }}" style="background-color: #{{ portfolio.bg-color }}2E">
@@ -41,7 +42,7 @@ layout: default
 
   <br>
   {% include section-break.md %}
-  <h2 class="post-list-heading">Testimonials</h2>
+  <h2 id="testimonials-section" class="post-list-heading">Testimonials</h2>
   <div class="splide">
     <div class="splide__track">
       <ul class="splide__list">
@@ -72,7 +73,7 @@ layout: default
   <!-- Timelines -->
   <br>
   {% include section-break.md %}
-  <h2 class="post-list-heading">Developer Story</h2>
+  <h2 id="developer-story-section" class="post-list-heading">Developer Story</h2>
   <ul class="timelines-wrapper">
     {% for timeline in timelines %}
     <li class="timeline-container {{ timeline.type }}">
@@ -128,14 +129,23 @@ layout: default
 
 <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
 <script>
-  const primarySlider = new Splide('.splide', {
-    type: 'fade',
-    pagination: false,
-    arrows: true,
-    cover: false,
-    drag: true,
-  });
-  document.addEventListener('DOMContentLoaded', function () {
-    primarySlider.mount();
-  });
+  function testimonialSetup() {
+    const primarySlider = new Splide('.splide', {
+      type: 'fade',
+      pagination: false,
+      arrows: true,
+      cover: false,
+      drag: true,
+    });
+    document.addEventListener('DOMContentLoaded', function () {
+      primarySlider.mount();
+    });
+  }
+
+  function updateHeader() {
+    document.getElementById('header-title').setAttribute('href', '#');
+  }
+
+  testimonialSetup();
+  updateHeader();
 </script>
