add post: setup deeplink android part 1

--- a/_sass/commons.scss
+++ b/_sass/commons.scss
@@ -148,6 +148,7 @@ video {
   margin-bottom: 16px;
   border-radius: $radius;
   width: 100%;
+  border: 1px solid $grey-color-light;
 }
 
 .dropdown {
