--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"></data>
+  <data class="u-url" href="{{ " /" | relative_url }}"></data>
 
   <div class="wrapper">
 
@@ -10,14 +10,14 @@
         <ul class="contact-list">
           <li class="p-name">
             {%- if site.author -%}
-              {{ site.author | escape }}
+            {{ site.author | escape }}
             {%- else -%}
-              {{ site.title | escape }}
+            {{ site.title | escape }}
             {%- endif -%}
-            </li>
-            {%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {%- endif -%}
+          </li>
+          {%- if site.email -%}
+          <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          {%- endif -%}
         </ul>
       </div>
 
@@ -33,3 +33,21 @@
   </div>
 
 </footer>
+
+<script>
+  function handleOnClickOnSectionUrl() {
+    var tags = ['h1', 'h2', 'h3', 'h4', 'h5', 'h6'];
+    tags.forEach(headline => {
+      var these = document.getElementsByTagName(headline);
+      if (these.length) {
+        console.log(these)
+      }
+      for (let i = 0; i < these.length; i++) {
+        const element = these[i];
+        var attr = window.location.href.replace(/#.*$/, '') + '#' + element.id;
+        element.setAttribute("onclick", "navigator.clipboard.writeText('" + attr + "')");
+      }
+    });
+  }
+  handleOnClickOnSectionUrl();
+</script>
