--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -14,6 +14,8 @@ $background-color: #fdfdfd !default;
 $brand-color: #2a7ae2 !default;
 $brand-color-variant: #004faf !default;
 
+$code-background: #F2F2F2 !default;
+
 // Custom
 $black-025: #fafafb;
 $black-050: #eff0f1;
