added section break for post & relate article

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -77,6 +77,8 @@ layout: default
 
 {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
 
+{% include dot.md %}
+
 <!-- RELATED POST -->
 {%- if page.main_tag -%}
 {%- if site.posts.size > 0 -%}
