change repo name to make conment work

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -136,7 +136,7 @@ layout: default
 <!-- RELATED POST -->
 
 {% if page.comments == true %}
-<script src="https://utteranc.es/client.js" repo="theachoem/theachoem" issue-term="title" theme="github-light"
+<script src="https://utteranc.es/client.js" repo="theachoem/portfolio-jekyll" issue-term="title" theme="github-light"
   crossorigin="anonymous" async>
   </script>
 {% endif %}
