--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,6 +26,9 @@
         <a class="page-link" href="#testimonials-section">Testimonials</a>
         <a class="page-link" href="#developer-story-section">Story</a>
         <a class="page-link" href="#blogs-section">Blogs</a>
+
+        {%- assign my_page = site.pages | where: "path", "about.md" | first -%}
+        <a class="page-link secondary-button" href="{{ my_page.url | relative_url }}"> {{ my_page.title }}</a>
       </div>
     </nav>
     {%- endif -%}
