add target blank to github state href

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -13,7 +13,7 @@ layout: default
   </div>
 
   {% include dot.md %}
-  <a class="github-state-section" href="https://github.com/{{ site.github_username }}">
+  <a class="github-state-section" href="https://github.com/{{ site.github_username }}" target="_blank">
     <iframe
       src="https://github-readme-stats.vercel.app/api?username={{ site.github_username }}&show_icons=true&include_all_commits=true&theme=buefy&hide_border=true"
       frameborder="0"></iframe>
