improve about page

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -9,11 +9,20 @@ layout: default
     </div>
     <div class="tc-right-side">
       {{ content }}
+      {% if page.skills -%}
+      <ul class="post-tags-wrapper mt2">
+        {% for skill in page.skills %}
+        <li class="post-tag">{{skill}}</li>
+        {% endfor %}
+      </ul>
+      {%- endif -%}
     </div>
   </div>
 
+  <br>
   {% include dot.md %}
-  <a class="github-state-section" href="https://github.com/{{ site.github_username }}" target="_blank">
+  <h2 class="post-list-heading">GitHub Stats</h2>
+  <a class="github-state-section mb3" href="https://github.com/{{ site.github_username }}" target="_blank">
     <iframe
       src="https://github-readme-stats.vercel.app/api?username={{ site.github_username }}&show_icons=true&include_all_commits=true&theme=buefy&hide_border=true"
       frameborder="0"></iframe>
@@ -21,8 +30,8 @@ layout: default
       src="https://github-readme-stats.vercel.app/api/top-langs/?username={{ site.github_username }}&layout=compact&theme=buefy&hide_border=true"
       frameborder="0"></iframe>
   </a>
-  <img width="100%" src="https://ghchart.rshah.org/{{ site.github_username }}" alt="{{ site.github_username }}'s Github chart" />
-  <br>
+  <img width="100%" class="mb2" src="https://ghchart.rshah.org/{{ site.github_username }}"
+    alt="{{ site.github_username }}'s Github chart" />
   <br>
   {% include dot.md %}
   {% include blogs.html %}
