--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -3,13 +3,20 @@
 .about {
   .summary-section,
   .github-state-section {
-    margin: $spacing-unit 0;
     display: flex;
     flex-direction: row;
     gap: $spacing-unit;
-
     @media screen and (max-width: $on-palm) {
       flex-direction: column;
+    }
+  }
+
+  .summary-section {
+    .tc-left-side {
+      // profile
+      img {
+        border: 1px solid $grey-color-light;
+      }
     }
   }
 
@@ -18,7 +25,6 @@
     * {
       outline: 1px solid $grey-color-light;
     }
-
     iframe {
       pointer-events: none;
     }
