refactor link to about page

--- a/_sass/commons.scss
+++ b/_sass/commons.scss
@@ -43,7 +43,6 @@
 }
 
 .secondary-button {
-  color: $brand-color !important;
   position: relative;
   display: inline-block;
   border: 1px solid transparent;
@@ -55,22 +54,21 @@
   cursor: pointer;
   user-select: none;
   transition: all 0.25s ease;
+  padding-right: 24px;
+  text-decoration: none;
 
   &::after {
-    content: "\00bb";
-    color: $brand-color;
-    opacity: 0;
+    content: "\21B3";
     position: absolute;
     transition: all 0.25s ease;
-    transform: translate(-2px, 0);
+    transform: translate(5px, 2.5px);
+    font-size: 14px;
   }
 
   &:hover {
-    text-decoration: none;
-    padding-right: 24px;
+    color: $brand-color !important;
     &::after {
-      opacity: 1;
-      transform: translate(6px, 0);
+      color: $brand-color;
     }
   }
 }
