--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -10,7 +10,7 @@ layout: default
     <div class="tc-right-side">
       {{ page.summary }}
       {% if page.skills -%}
-      <ul class="post-tags-wrapper mt2">
+      <ul class="post-tags-wrapper mt">
         {% for skill in page.skills %}
         <li class="post-tag">{{skill}}</li>
         {% endfor %}
