--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@ layout: default
         I'm a</p>
       <h1>{{ page.role }}</h1>
       <p>{{ page.summary }}</p>
-      <a href="/cv" class="primary-button mt2">View CV</a>
+      <a href="/about" class="primary-button mt2">About me</a>
     </div>
   </div>
 
