--- a/_sass/commons.scss
+++ b/_sass/commons.scss
@@ -43,35 +43,74 @@
 }
 
 .secondary-button {
+  color: $brand-color;
+  padding: 8px 16px;
   position: relative;
   display: inline-block;
-  border: 1px solid transparent;
+  padding: 0.8em;
+  border: 1px solid $brand-color;
   border-radius: $radius;
-  background-color: transparent;
   outline: none;
+  font-family: inherit;
+  font-size: 13px;
+  font-weight: normal;
+  line-height: 1.15384615;
   text-align: center;
   text-decoration: none !important;
   cursor: pointer;
   user-select: none;
   transition: all 0.25s ease;
   padding-right: 24px;
-  text-decoration: none;
 
   &::after {
     content: "\21B3";
+    color: $brand-color;
     position: absolute;
     transition: all 0.25s ease;
     transform: translate(5px, 2.5px);
-    font-size: 14px;
   }
 
   &:hover {
-    color: $brand-color !important;
+    background-color: $brand-color-variant !important;
+    color: $background-color;
+    border: 1px solid $brand-color-variant;
     &::after {
-      color: $brand-color;
+      color: $background-color;
     }
   }
 }
+
+// .secondary-button {
+//   color: $background-color !important;
+//   background-color: $brand-color !important;
+//   position: relative;
+//   display: inline-block;
+//   border: 1px solid transparent;
+//   border-radius: $radius;
+//   outline: none;
+//   text-align: center;
+//   text-decoration: none !important;
+//   cursor: pointer;
+//   user-select: none;
+//   transition: all 0.25s ease;
+//   padding-right: 24px;
+//   text-decoration: none;
+
+//   &::after {
+//     content: "\21B3";
+//     position: absolute;
+//     transition: all 0.25s ease;
+//     transform: translate(5px, 2.5px);
+//     font-size: 14px;
+//   }
+
+// &:hover {
+//   color: $brand-color !important;
+//   &::after {
+//     color: $brand-color;
+//   }
+// }
+// }
 
 .mt0 {
   margin-top: 0px;
