update border radius in video gallery

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -38,4 +38,9 @@
   .scale-up {
     transform: scale(1.0075);
   }
+
+  .splide__track {
+    border-radius: $radius;
+    overflow: hidden;
+  }
 }
