add upwork link

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,7 +8,7 @@ layout: default
       <img src="{{ page.profile }}" alt="{{ page.profile }}">
     </div>
     <div class="tc-right-side">
-      {{ page.summary }}
+      {{ page.summary }} <a href="{{ site.upwork_url }}" class="cl-green">Upwork.</a>
       {% if page.skills -%}
       <ul class="post-tags-wrapper mt">
         {% for skill in page.skills %}
