--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,6 +15,7 @@ layout: default
         I'm a</p>
       <h1>{{ page.role }}</h1>
       <p>{{ page.summary }}</p>
+      <a href="{{ site.upwork_url }}" class="primary-button bg-green">Upwork</a>
       <a href="/about" class="secondary-button mt2">About me</a>
     </div>
   </div>
