--- a/_sass/commons.scss
+++ b/_sass/commons.scss
@@ -280,3 +280,11 @@ iframe {
 .inline-flex {
   display: inline-flex;
 }
+
+.bg-green {
+  background-color: #4EA62F !important;
+}
+
+.cl-green {
+  color: #4EA62F !important;
+}
