--- a/_sass/love.scss
+++ b/_sass/love.scss
@@ -7,15 +7,22 @@
   position: relative;
   color: $background-color;
 
+  aspect-ratio: 2;
+  overflow: hidden;
+  display: flex;
+  align-items: center; /* vertical */
+  justify-content: center; /* horizontal */
+  border-radius: $radius;
+
   span {
     position: absolute;
     top: 0;
     left: 16px;
     top: 0;
     bottom: 0;
-    margin-top: 8px;
+    margin-top: 16px;
     text-align: left;
-    text-shadow: 0.5px 0.5px $text-color
+    text-shadow: 0.5px 0.5px $text-color;
   }
 
   img {
