add intership 1 performance review

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
 {%- assign timelines = site.timelines | reverse -%}
-{%- assign testimonials = site.testimonials -%}
+{%- assign testimonials = site.testimonials | reverse -%}
 {%- assign portfolios = site.portfolios -%}
 
 <div class="post-list-heading"></div>
